ajustes na segurança dos planos, ajuste no loading na tela e ajuste no limpar histórico no admin

--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -245,7 +245,7 @@
             <div class="header-actions">
                 <button class="btn-icon" id="notification-icon" title="Notificações">
                     <i class="fas fa-bell"></i>
-                    <span class="badge badge-danger">3</span>
+                    <span class="badge badge-danger" style="display:none"></span>
                 </button>
             </div>
         </header>
