correção no admin na parte de atualização de historico e deleção de histórico

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -263,7 +263,7 @@
                         <button class="btn-refresh" onclick="loadPayments()">
                             <i class="fas fa-sync-alt"></i> Atualizar
                         </button>
-                        <button class="btn-danger" onclick="clearActivity()">
+                        <button class="btn-danger" onclick="clearPayments()">
                             <i class="fas fa-trash"></i> Apagar histórico
                         </button>
                     </div>
