--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -128,6 +128,17 @@
                             <span class="stat-badge">Estimada</span>
                         </div>
                     </div>
+
+                    <div class="stat-card">
+                        <div class="stat-icon pending">
+                            <i class="fas fa-hourglass-half"></i>
+                        </div>
+                        <div class="stat-details">
+                            <h3 id="pendingPaymentsAmount">R$ 0</h3>
+                            <p>Pagamentos Pendentes</p>
+                            <span class="stat-badge">Em aberto</span>
+                        </div>
+                    </div>
                 </div>
 
                 <!-- Charts Row -->
