ajustes para publicar já no endereco ironnet.com.br a plataforma para uso

--- a/frontend/admin-reset-password.html
+++ b/frontend/admin-reset-password.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reset de Senha - Admin | Ades Plataform</title>
+    <title>Reset de Senha - Admin | Iron Net</title>
     <link rel="stylesheet" href="css/admin.css">
     <style>
         * {
