--- a/frontend/cookies.html
+++ b/frontend/cookies.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Política de Cookies - Ades Plataform</title>
+    <title>Política de Cookies - Iron Net</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         body { font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif; background: #0f172a; color: #e2e8f0; margin: 0; }
@@ -21,7 +21,7 @@
         <div class="card">
             <h1>Política de Cookies</h1>
             <div class="badge">Atualizado: 12/2025</div>
-            <p>Esta política explica o uso de cookies na Ades Plataform.</p>
+            <p>Esta política explica o uso de cookies na Iron Net.</p>
             <h2>O que são cookies?</h2>
             <p>Cookies são pequenos arquivos armazenados no seu dispositivo que ajudam a lembrar preferências e manter você autenticado.</p>
             <h2>Cookies que utilizamos</h2>
