--- a/frontend/faq.html
+++ b/frontend/faq.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FAQ - Perguntas Frequentes - Ades Plataform</title>
+    <title>FAQ - Perguntas Frequentes - Iron Net</title>
     <link rel="stylesheet" href="css/manual.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -175,7 +175,7 @@
             <div class="header-content">
                 <div class="logo-section">
                     <i class="fas fa-shield-alt"></i>
-                    <h1>Ades Plataform</h1>
+                    <h1>Iron Net</h1>
                 </div>
                 <div style="display: flex; gap: 15px;">
                     <a href="manual.html" class="btn-back">
@@ -219,12 +219,12 @@
 
                 <div class="faq-item">
                     <div class="faq-question" onclick="toggleFaq(this)">
-                        <h4>O que é a Ades Plataform?</h4>
+                        <h4>O que é a Iron Net?</h4>
                         <div class="faq-icon"><i class="fas fa-chevron-down"></i></div>
                     </div>
                     <div class="faq-answer">
                         <div class="faq-answer-content">
-                            <p>A Ades Plataform é uma plataforma completa de análise de segurança que oferece diversas ferramentas para identificar vulnerabilidades em sistemas, redes, aplicações e código-fonte.</p>
+                            <p>A Iron Net é uma plataforma completa de análise de segurança que oferece diversas ferramentas para identificar vulnerabilidades em sistemas, redes, aplicações e código-fonte.</p>
                             <p>Nossa plataforma foi desenvolvida para profissionais de segurança, desenvolvedores e administradores de sistemas que desejam melhorar a segurança de suas aplicações e infraestrutura.</p>
                         </div>
                     </div>
@@ -460,7 +460,7 @@
                     <div class="faq-answer">
                         <div class="faq-answer-content">
                             <p>Sim! Planos Professional e Enterprise têm acesso completo à nossa API REST.</p>
-                            <p>A API permite integrar a Ades Plataform em seus sistemas, CI/CD pipelines e automações.</p>
+                            <p>A API permite integrar a Iron Net em seus sistemas, CI/CD pipelines e automações.</p>
                             <p>Consulte a <a href="documentation.html">documentação técnica</a> para mais detalhes.</p>
                         </div>
                     </div>
@@ -610,7 +610,7 @@
     <!-- Footer -->
     <footer class="manual-footer">
         <div class="container">
-            <p>&copy; 2025 Ades Plataform. Todos os direitos reservados.</p>
+            <p>&copy; 2025 Iron Net. Todos os direitos reservados.</p>
             <p>FAQ atualizado em 05/12/2025</p>
         </div>
     </footer>
