--- a/frontend/landing.html
+++ b/frontend/landing.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Ades Plataform - Plataforma completa de análise e testes de segurança para aplicações web">
-    <title>Ades Plataform - Proteção Profissional para suas Aplicações</title>
+    <meta name="description" content="Iron Net - Plataforma completa de análise e testes de segurança para aplicações web">
+    <title>Iron Net - Proteção Profissional para suas Aplicações</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         * {
@@ -569,7 +569,7 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="logo">
-            <i class="fas fa-shield-alt"></i> Ades Plataform
+            <i class="fas fa-shield-alt"></i> Iron Net
         </div>
         <ul class="nav-links" id="navLinks">
             <li><a href="#features">Recursos</a></li>
@@ -726,7 +726,7 @@
     <section class="testimonials" id="testimonials">
         <div class="section-header">
             <h2>O que dizem nossos <span class="gradient-text">Clientes</span></h2>
-            <p>Milhares de desenvolvedores confiam na Ades Plataform</p>
+            <p>Milhares de desenvolvedores confiam na Iron Net</p>
         </div>
         <div class="testimonials-grid">
             <div class="testimonial-card">
@@ -784,7 +784,7 @@
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-section">
-                <h3><i class="fas fa-shield-alt"></i> Ades Plataform</h3>
+                <h3><i class="fas fa-shield-alt"></i> Iron Net</h3>
                 <p>Plataforma líder em análise de segurança para aplicações web. Proteja seu código, proteja seu negócio.</p>
                 <div class="social-links">
                     <a href="#"><i class="fab fa-twitter"></i></a>
@@ -816,7 +816,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 Ades Plataform. Todos os direitos reservados.</p>
+            <p>&copy; 2025 Iron Net. Todos os direitos reservados.</p>
         </div>
     </footer>
 
