--- a/frontend/manual.html
+++ b/frontend/manual.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manual de Uso - Ades Plataform</title>
+    <title>Manual de Uso - Iron Net</title>
     <link rel="stylesheet" href="css/manual.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -14,7 +14,7 @@
             <div class="header-content">
                 <div class="logo-section">
                     <i class="fas fa-shield-alt"></i>
-                    <h1>Ades Plataform</h1>
+                    <h1>Iron Net</h1>
                 </div>
                 <a href="dashboard.html" class="btn-back">
                     <i class="fas fa-arrow-left"></i> Voltar ao Dashboard
@@ -55,8 +55,8 @@
                 </div>
                 
                 <div class="content-card">
-                    <h3>Bem-vindo à Ades Plataform</h3>
-                    <p>A Ades Plataform é uma plataforma profissional de análise de segurança que oferece diversas ferramentas para identificar vulnerabilidades em sistemas, redes e aplicações.</p>
+                    <h3>Bem-vindo à Iron Net</h3>
+                    <p>A Iron Net é uma plataforma profissional de análise de segurança que oferece diversas ferramentas para identificar vulnerabilidades em sistemas, redes e aplicações.</p>
                     
                     <div class="info-box info">
                         <i class="fas fa-info-circle"></i>
@@ -578,7 +578,7 @@
 
                     <h4>Isenção de Responsabilidade da Plataforma</h4>
                     <div class="disclaimer-box">
-                        <p><strong>A Ades Plataform e seus desenvolvedores NÃO são responsáveis por:</strong></p>
+                        <p><strong>A Iron Net e seus desenvolvedores NÃO são responsáveis por:</strong></p>
                         <ul>
                             <li>Qualquer uso indevido ou ilegal das ferramentas</li>
                             <li>Danos causados a sistemas terceiros</li>
@@ -687,7 +687,7 @@
     <!-- Footer -->
     <footer class="manual-footer">
         <div class="container">
-            <p>&copy; 2025 Ades Plataform. Todos os direitos reservados.</p>
+            <p>&copy; 2025 Iron Net. Todos os direitos reservados.</p>
             <p>Use com responsabilidade e ética.</p>
         </div>
     </footer>
