--- a/frontend/sla.html
+++ b/frontend/sla.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SLA e Suporte - Ades Plataform</title>
+    <title>SLA e Suporte - Iron Net</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         body { font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif; background: #0f172a; color: #e2e8f0; margin: 0; }
@@ -22,7 +22,7 @@
     <div class="container">
         <div class="card">
             <h1>SLA e Suporte</h1>
-            <p>Compromissos de suporte e disponibilidade da Ades Plataform.</p>
+            <p>Compromissos de suporte e disponibilidade da Iron Net.</p>
         </div>
         <div class="card">
             <h2>Contatos da Empresa</h2>
