--- a/frontend/terms.html
+++ b/frontend/terms.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Termos de Uso - Ades Plataform</title>
+    <title>Termos de Uso - Iron Net</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         body { font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif; background: #0f172a; color: #e2e8f0; margin: 0; }
@@ -21,7 +21,7 @@
         <div class="card">
             <h1>Termos de Uso</h1>
             <div class="badge">Atualizado: 12/2025</div>
-            <p>Bem-vindo à Ades Plataform. Ao utilizar esta plataforma, você concorda com estes termos.</p>
+            <p>Bem-vindo à Iron Net. Ao utilizar esta plataforma, você concorda com estes termos.</p>
             <h2>Uso Autorizado</h2>
             <ul>
                 <li>Utilize apenas em sistemas e códigos que você possui ou possui autorização explícita.</li>
@@ -35,7 +35,7 @@
             <h2>Pagamento e Reembolso</h2>
             <p>Assinaturas são cobradas mensalmente. Em casos de falhas no pagamento, o acesso pode ser limitado. Políticas de reembolso são tratadas conforme legislação aplicável e nossos termos de suporte.</p>
             <h2>Responsabilidade</h2>
-            <p>Você é integralmente responsável pelo uso da plataforma e pelos resultados obtidos. A Ades Plataform não se responsabiliza por uso indevido.</p>
+            <p>Você é integralmente responsável pelo uso da plataforma e pelos resultados obtidos. A Iron Net não se responsabiliza por uso indevido.</p>
             <h2>Privacidade</h2>
             <p>Consulte nossa <a href="privacy.html">Política de Privacidade</a> para saber como tratamos seus dados.</p>
             <h2>Alterações</h2>
