--- a/frontend/billing.html
+++ b/frontend/billing.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Faturas - Ades Plataform</title>
+    <title>Faturas - Iron Net</title>
     <link rel="stylesheet" href="css/modern-style.css?v=6.2">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
