--- a/frontend/checkout.html
+++ b/frontend/checkout.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Checkout - Ades Plataform</title>
+    <title>Checkout - Iron Net</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         * {
@@ -317,7 +317,7 @@
     <div class="container">
         <div class="checkout-header">
             <h1><i class="fas fa-shield-alt"></i> Checkout Seguro</h1>
-            <p>Complete seu pagamento e comece a usar a Ades Plataform</p>
+            <p>Complete seu pagamento e comece a usar a Iron Net</p>
             <div id="errorBanner" class="error-banner"></div>
         </div>
 
