--- a/frontend/dashboard-old.html
+++ b/frontend/dashboard-old.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Security Scanner - Dashboard</title>
+    <title>Iron Net - Dashboard</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -13,7 +13,7 @@
         <aside class="sidebar">
             <div class="sidebar-header">
                 <i class="fas fa-shield-halved"></i>
-                <h2>Security Scanner</h2>
+                <h2>Iron Net</h2>
             </div>
             
             <nav class="sidebar-nav">
