--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
-    <title>Ades Plataform - Ferramentas de Segurança</title>
+    <title>Iron Net - Ferramentas de Segurança</title>
     <link rel="stylesheet" href="/css/modern-style.css?v=6.2">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -108,7 +108,7 @@
     <div class="sidebar" id="sidebar">
         <div class="sidebar-header">
             <i class="fas fa-shield-halved"></i>
-            <h2>Ades Plataform</h2>
+            <h2>Iron Net</h2>
         </div>
         <nav class="sidebar-nav">
             <a href="#dashboard" class="nav-item active" data-page="dashboard">
@@ -266,7 +266,7 @@
         <div class="page active" id="dashboard-page">
             <div class="page-header">
                 <h1>Dashboard</h1>
-                <p>Bem-vindo à Ades Plataform</p>
+                <p>Bem-vindo à Iron Net</p>
             </div>
 
             <div class="stats-grid">
