--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Security Scanner - Login</title>
+    <title>Iron Net - Login</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -12,7 +12,7 @@
         <div class="login-box">
             <div class="logo-section">
                 <i class="fas fa-shield-halved"></i>
-                <h1>Security Scanner</h1>
+                <h1>Iron Net</h1>
                 <p>Análise de Segurança OWASP Top 10</p>
             </div>
             
