--- a/frontend/privacy.html
+++ b/frontend/privacy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Política de Privacidade - Ades Plataform</title>
+    <title>Política de Privacidade - Iron Net</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         body { font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif; background: #0f172a; color: #e2e8f0; margin: 0; }
@@ -21,7 +21,7 @@
         <div class="card">
             <h1>Política de Privacidade</h1>
             <div class="badge">Atualizado: 12/2025</div>
-            <p>Esta política descreve como a Ades Plataform coleta, utiliza e protege seus dados.</p>
+            <p>Esta política descreve como a Iron Net coleta, utiliza e protege seus dados.</p>
             <h2>Dados Coletados</h2>
             <ul>
                 <li>Dados de cadastro (nome, email, usuário)</li>
