--- a/frontend/register.html
+++ b/frontend/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro - Ades Plataform</title>
+    <title>Cadastro - Iron Net</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         * {
@@ -305,7 +305,7 @@
                 <i class="fas fa-shield-alt"></i>
             </div>
             <h1>Criar Conta</h1>
-            <p>Cadastre-se na Ades Plataform</p>
+            <p>Cadastre-se na Iron Net</p>
             <div class="plan-badge" id="planBadge">
                 <i class="fas fa-crown"></i> Plano Free
             </div>
