--- a/frontend/tools.html
+++ b/frontend/tools.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ades Plataform - Ferramentas de Segurança</title>
+    <title>Iron Net - Ferramentas de Segurança</title>
     <link rel="stylesheet" href="/css/modern-style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -20,7 +20,7 @@
     <div class="sidebar" id="sidebar">
         <div class="sidebar-header">
             <i class="fas fa-shield-halved"></i>
-            <h2>Ades Plataform</h2>
+            <h2>Iron Net</h2>
         </div>
         <nav class="sidebar-nav">
             <a href="#dashboard" class="nav-item active" data-page="dashboard">
@@ -87,7 +87,7 @@
         <div class="page active" id="dashboard-page">
             <div class="page-header">
                 <h1>Dashboard</h1>
-                <p>Bem-vindo à Ades Plataform</p>
+                <p>Bem-vindo à Iron Net</p>
             </div>
 
             <div class="stats-grid">
