atualizacoes com conta de email para reset de senha e email enviado de boas vindas e ajustes de fluxo no checkout e ajustes de responsividade

--- a/frontend/admin-reset-password.html
+++ b/frontend/admin-reset-password.html
@@ -25,11 +25,10 @@
         .reset-container {
             background: rgba(255, 255, 255, 0.95);
             backdrop-filter: blur(10px);
-            border-radius: 20px;
+            border-radius: 18px;
             box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
-            padding: 40px;
-            max-width: 500px;
-            width: 100%;
+            padding: 28px;
+            width: min(500px, 94vw);
             animation: slideUp 0.5s ease;
         }
 
@@ -74,10 +73,10 @@
 
         .form-group input {
             width: 100%;
-            padding: 12px 15px;
+            padding: 12px 14px;
             border: 2px solid #e0e0e0;
             border-radius: 10px;
-            font-size: 14px;
+            font-size: 16px;
             transition: all 0.3s ease;
         }
 
@@ -86,6 +85,22 @@
             border-color: #667eea;
             box-shadow: 0 0 0 3px rgba(102, 126, 234, 0.1);
         }
+        .input-wrapper { position: relative; }
+        .input-wrapper .toggle-password {
+            position: absolute;
+            right: 12px;
+            top: 50%;
+            transform: translateY(-50%);
+            background: transparent;
+            border: none;
+            color: #667eea;
+            font-size: 18px;
+            cursor: pointer;
+            padding: 6px;
+            border-radius: 8px;
+        }
+        .input-wrapper .toggle-password:active { transform: translateY(-50%) scale(0.95); }
+        .input-wrapper input { padding-right: 44px; }
 
         .password-requirements {
             background: #f8f9fa;
@@ -124,7 +139,7 @@
 
         .btn-reset {
             width: 100%;
-            padding: 14px;
+            padding: 12px 16px;
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             color: white;
             border: none;
@@ -209,6 +224,21 @@
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
         }
+
+        @media (max-width: 640px) {
+            .reset-container { padding: 24px; border-radius: 16px; }
+            .reset-header h1 { font-size: 24px; }
+            .form-group input { padding: 11px 12px; font-size: 15px; }
+            .input-wrapper .toggle-password { right: 10px; }
+            .btn-reset { padding: 11px 14px; font-size: 15px; }
+        }
+        @media (max-width: 400px) {
+            .reset-container { padding: 18px; border-radius: 14px; }
+            .reset-header h1 { font-size: 22px; }
+            .form-group { margin-bottom: 18px; }
+            .form-group input { padding: 10px 12px; font-size: 15px; }
+            .btn-reset { padding: 10px 12px; font-size: 15px; }
+        }
     </style>
 </head>
 <body>
@@ -223,26 +253,32 @@
         <form id="resetForm">
             <div class="form-group">
                 <label for="newPassword">Nova Senha</label>
-                <input 
-                    type="password" 
-                    id="newPassword" 
-                    name="newPassword" 
-                    placeholder="Digite sua nova senha"
-                    required
-                    minlength="8"
-                >
+                <div class="input-wrapper">
+                    <input 
+                        type="password" 
+                        id="newPassword" 
+                        name="newPassword" 
+                        placeholder="Digite sua nova senha"
+                        required
+                        minlength="8"
+                    >
+                    <button type="button" class="toggle-password" data-target="newPassword"><i class="fas fa-eye"></i></button>
+                </div>
             </div>
 
             <div class="form-group">
                 <label for="confirmPassword">Confirmar Nova Senha</label>
-                <input 
-                    type="password" 
-                    id="confirmPassword" 
-                    name="confirmPassword" 
-                    placeholder="Digite novamente sua nova senha"
-                    required
-                    minlength="8"
-                >
+                <div class="input-wrapper">
+                    <input 
+                        type="password" 
+                        id="confirmPassword" 
+                        name="confirmPassword" 
+                        placeholder="Digite novamente sua nova senha"
+                        required
+                        minlength="8"
+                    >
+                    <button type="button" class="toggle-password" data-target="confirmPassword"><i class="fas fa-eye"></i></button>
+                </div>
             </div>
 
             <div class="password-requirements">
@@ -367,6 +403,18 @@
             } else {
                 this.style.borderColor = '#e0e0e0';
             }
+        });
+
+        document.addEventListener('click', (e) => {
+            const btn = e.target.closest('.toggle-password');
+            if (!btn) return;
+            const targetId = btn.getAttribute('data-target');
+            const input = document.getElementById(targetId);
+            if (!input) return;
+            const isPassword = input.type === 'password';
+            input.type = isPassword ? 'text' : 'password';
+            const icon = btn.querySelector('i');
+            if (icon) icon.className = isPassword ? 'fas fa-eye-slash' : 'fas fa-eye';
         });
     </script>
 </body>
