--- a/frontend/admin-login.html
+++ b/frontend/admin-login.html
@@ -166,6 +166,23 @@
             font-size: 16px;
             z-index: 1;
         }
+        .input-wrapper { position: relative; }
+        .input-wrapper .toggle-password {
+            position: absolute;
+            right: 35px;
+            top: 50%;
+            transform: translateY(-50%);
+            background: transparent;
+            border: none;
+            color: rgba(255, 255, 255, 0.85);
+            font-size: 16px;
+            cursor: pointer;
+            padding: 6px;
+            border-radius: 8px;
+            z-index: 2;
+        }
+        .input-wrapper .toggle-password:active { transform: translateY(-50%) scale(0.95); }
+        .input-wrapper .form-input { padding-right: 44px; }
 
         .form-input {
             width: 100%;
@@ -442,6 +459,7 @@
                             autocomplete="current-password"
                             required
                         >
+                        <button type="button" class="toggle-password" data-target="adminPassword"><i class="fas fa-eye"></i></button>
                     </div>
                 </div>
 
@@ -767,6 +785,19 @@
                 btn.innerText = 'Criar Administrador';
             }
         }
+    </script>
+    <script>
+        document.addEventListener('click', (e) => {
+            const btn = e.target.closest('.toggle-password');
+            if (!btn) return;
+            const targetId = btn.getAttribute('data-target');
+            const input = document.getElementById(targetId);
+            if (!input) return;
+            const isPassword = input.type === 'password';
+            input.type = isPassword ? 'text' : 'password';
+            const icon = btn.querySelector('i');
+            if (icon) icon.className = isPassword ? 'fas fa-eye-slash' : 'fas fa-eye';
+        });
     </script>
 
     <!-- Forgot Password Modal -->
