--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -478,6 +478,13 @@
                     <label>Limite de Scans</label>
                     <input type="number" id="editUserScansLimit" class="form-input">
                 </div>
+                <div class="form-group">
+                    <label>Nova Senha</label>
+                    <div class="password-wrapper">
+                        <input type="password" id="editUserNewPassword" class="form-input" placeholder="Deixar em branco para não alterar">
+                        <button type="button" class="toggle-password" data-target="editUserNewPassword"><i class="fas fa-eye"></i></button>
+                    </div>
+                </div>
                 <div class="form-group checkbox-group">
                     <label>
                         <input type="checkbox" id="editUserIsAdmin">
