--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -1455,7 +1455,10 @@
                     <div class="card-body">
                         <div class="form-group">
                             <label><i class="fas fa-key"></i> Senha para Análise</label>
-                            <input type="password" id="password-input" class="form-control" placeholder="Digite uma senha">
+                            <div class="password-wrapper">
+                                <input type="password" id="password-input" class="form-control" placeholder="Digite uma senha">
+                                <button type="button" class="toggle-password" data-target="password-input"><i class="fas fa-eye"></i></button>
+                            </div>
                             <small class="text-muted">A senha não é enviada para nenhum servidor</small>
                         </div>
                         <button class="btn-primary btn-block" onclick="checkPasswordStrength()">
