--- a/frontend/register.html
+++ b/frontend/register.html
@@ -98,6 +98,21 @@
             transform: translateY(-50%);
             color: var(--text-dark);
         }
+        .input-wrapper .toggle-password {
+            position: absolute;
+            right: 12px;
+            top: 50%;
+            transform: translateY(-50%);
+            background: transparent;
+            border: none;
+            color: var(--text-dark);
+            font-size: 18px;
+            cursor: pointer;
+            padding: 6px;
+            border-radius: 8px;
+        }
+        .input-wrapper .toggle-password:active { transform: translateY(-50%) scale(0.95); }
+        .input-wrapper .form-control { padding-right: 44px; }
 
         .form-control {
             width: 100%;
@@ -386,6 +401,7 @@
                         placeholder="Digite uma senha forte"
                         required
                     >
+                    <button type="button" class="toggle-password" data-target="password"><i class="fas fa-eye"></i></button>
                 </div>
                 <div class="password-strength">
                     <div class="password-strength-bar" id="strengthBar"></div>
@@ -415,6 +431,7 @@
                         placeholder="Digite a senha novamente"
                         required
                     >
+                    <button type="button" class="toggle-password" data-target="confirmPassword"><i class="fas fa-eye"></i></button>
                 </div>
                 <div class="error-message" id="confirmPasswordError"></div>
             </div>
@@ -634,40 +651,53 @@
             document.getElementById('submitBtn').disabled = true;
 
             try {
-                // Register user
-                const response = await fetch('/api/auth/register', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify({
-                        username: inputs.username.value.trim(),
-                        email: inputs.email.value.trim(),
-                        password: inputs.password.value,
-                        full_name: inputs.fullName.value.trim(),
-                        selected_plan: selectedPlan
-                    })
-                });
-
-                const data = await response.json();
-
-                if (response.ok) {
-                    // Store user info
-                    localStorage.setItem('registeredEmail', inputs.email.value);
-                    localStorage.setItem('registeredUsername', inputs.username.value);
-                    localStorage.setItem('selectedPlan', selectedPlan);
-                    
-                    // Redirect based on plan
-                    if (selectedPlan === 'free') {
-                        // Auto login and go to dashboard
+                if (selectedPlan === 'free') {
+                    const response = await fetch('/api/auth/register', {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json'
+                        },
+                        body: JSON.stringify({
+                            username: inputs.username.value.trim(),
+                            email: inputs.email.value.trim(),
+                            password: inputs.password.value,
+                            full_name: inputs.fullName.value.trim(),
+                            selected_plan: selectedPlan
+                        })
+                    });
+                    const data = await response.json();
+                    if (response.ok) {
+                        localStorage.setItem('registeredEmail', inputs.email.value);
+                        localStorage.setItem('registeredUsername', inputs.username.value);
+                        localStorage.setItem('selectedPlan', selectedPlan);
                         localStorage.setItem('token', data.access_token);
                         window.location.href = 'dashboard.html?welcome=true';
                     } else {
-                        // Go to checkout
-                        window.location.href = `checkout.html?plan=${selectedPlan}`;
+                        throw new Error(data.detail || 'Erro ao criar conta');
                     }
                 } else {
-                    throw new Error(data.detail || 'Erro ao criar conta');
+                    const response = await fetch('/api/payments/create-checkout-registration', {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json'
+                        },
+                        body: JSON.stringify({
+                            username: inputs.username.value.trim(),
+                            email: inputs.email.value.trim(),
+                            password: inputs.password.value,
+                            full_name: inputs.fullName.value.trim(),
+                            selected_plan: selectedPlan
+                        })
+                    });
+                    const data = await response.json();
+                    if (response.ok && data.checkout_url) {
+                        localStorage.setItem('registeredEmail', inputs.email.value);
+                        localStorage.setItem('registeredUsername', inputs.username.value);
+                        localStorage.setItem('selectedPlan', selectedPlan);
+                        window.location.href = data.checkout_url;
+                    } else {
+                        throw new Error(data.detail || 'Checkout indisponível');
+                    }
                 }
             } catch (error) {
                 alert('Erro ao criar conta: ' + error.message);
@@ -685,6 +715,17 @@
             error.textContent = message;
             error.classList.add('show');
         }
+        document.querySelectorAll('.toggle-password').forEach(btn => {
+            btn.addEventListener('click', () => {
+                const targetId = btn.getAttribute('data-target');
+                const input = document.getElementById(targetId);
+                if (!input) return;
+                const isPassword = input.type === 'password';
+                input.type = isPassword ? 'text' : 'password';
+                const icon = btn.querySelector('i');
+                if (icon) icon.className = isPassword ? 'fas fa-eye-slash' : 'fas fa-eye';
+            });
+        });
     </script>
     <script>
         (function(){
